# ssl-camera-converter

./: CMakeLists.txt  LICENSE  README.md
prm/: camera0.xml  camera1.xml
src/: main.cpp
src/Calibrater/: Calibrater.cpp  Calibrater.hpp
src/Controller/: Controller.cpp  Controller.hpp
src/Converter/: Converter.cpp  Converter.hpp
src/ExtractDifferences/: ExtractDifferences.cpp  ExtractDifferences.hpp
src/Initializer/: Initializer.cpp  Initializer.hpp
src/model/: Camera.cpp  Camera.hpp  Coordinates.hpp
